Fix:product inputbox empty on firefox

--- a/media/digicom/assets/less/digicom-admin.less
+++ b/media/digicom/assets/less/digicom-admin.less
@@ -677,7 +677,7 @@ body.sidebar-right-collapse {
 		.control-label {float: none;}
 		.controls {
 			margin-left: 0;
-			input[type="text"] {width: 100%;box-sizing: border-box; padding: 18px 10px;}
+			input[type="text"] {width: 100%; height: 100%; box-sizing: border-box; padding: 10px;}
 		}
 	}
 }
